[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/MainPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/audio/Tempo.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/Taches.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="MainPanel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -245.0
margin_right = 150.0
margin_bottom = 149.0
script = ExtResource( 1 )

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 200, 100 )
alignment = 1

[node name="Tempo" type="Button" parent="Buttons"]
margin_right = 138.0
margin_bottom = 374.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Tempo"

[node name="TempoSound" type="AudioStreamPlayer2D" parent="Buttons/Tempo"]
position = Vector2( 142, 0 )
stream = ExtResource( 3 )
bus = "Effects"

[node name="Taches" type="Button" parent="Buttons"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 374.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "TÃ¢ches"

[node name="TachesSound" type="AudioStreamPlayer2D" parent="Buttons/Taches"]
position = Vector2( -142, 0 )
stream = ExtResource( 4 )
bus = "Effects"

[connection signal="pressed" from="Buttons/Tempo" to="." method="_on_Tempo_pressed"]
[connection signal="pressed" from="Buttons/Taches" to="." method="_on_Taches_pressed"]
